syntax = "proto3";

package proto;

message NewService {
  string name = 1;
  string site = 2;
}

message Service {
  uint32 serviceId = 1;
  string name = 2;
  string site = 3;
}

message FilterName {
  string name = 1;
}

message Services {
  repeated Service service = 1;
}

message serviceId {
  uint32 serviceId = 1;
}

message UpdateService {
  uint32 serviceId = 1;
  string name = 2;
  string email = 3;
}

service ServicesService {
  rpc Create (NewService) returns (Service) {}
  rpc Read (FilterName) returns (Services) {}
  rpc ReadById (serviceId) returns (Service) {}
  rpc Update (UpdateService) returns (serviceId) {}
  rpc Delete (serviceId) returns (serviceId) {}
}